--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "dev": "nodemon server.js",
      "build": "npm install"
   },
+  
+  "engines": {
+    "node": ">=14.0.0" 
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
