--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "dev": "node server.js",
-     "build": "npm install"
+    "start": "node index.js",
+    "build": "npm install"
   },
   
   "engines": {
